# anemll-flash-mlx

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
ci/: CI.md  smoke.sh
csrc/: expert_io.c
docs/: migration-map.md  qc-report.md
examples/: EXAMPLES.md  oracle_replay.sh  qwen35_35b_q2.sh  qwen35_35b_q4.sh  qwen35_397b_q2.sh
flash_moe_mlx/: __init__.py  expert_io.py  model.py  upstream_gated_delta.py  upstream_switch_layers.py
scripts/: SCRIPTS.md  __init__.py  export_mixed_sidecar.py  export_tiered_35b_2bit.py  run_qwen35.py
tests/: test_imports.py
tools/diagnostics/: bench_capture.py  bench_slot_bank_oracle_hits.py  bench_slot_commit.py
